# api/openapi-spec/swagger.json
@@ -375,6 +375,25 @@
         }
       }
     },
+    "kruise.apps.v1alpha1.ExecAction": {
+      "description": "ExecAction describes a \"run in container\" action.",
+      "type": "object",
+      "required": [
+        "container"
+      ],
+      "properties": {
+        "command": {
+          "description": "Command is the command line to execute inside the container, the working directory for the command  is root ('/') in the container's filesystem. The command is simply exec'd, it is not run inside a shell, so traditional shell instructions ('|', etc) won't work. To use a shell, you need to explicitly call out to that shell. Exit status of 0 is treated as live/healthy and non-zero is unhealthy.",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "container": {
+          "type": "string"
+        }
+      }
+    },
     "kruise.apps.v1alpha1.FailurePolicy": {
       "description": "FailurePolicy indicates the behavior of the job, when failed pod is found.",
       "type": "object",
@@ -387,6 +406,20 @@
         "type": {
           "description": "Type indicates the type of FailurePolicyType.",
           "type": "string"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.Handler": {
+      "description": "Handler defines a specific action that should be taken",
+      "type": "object",
+      "properties": {
+        "exec": {
+          "description": "One and only one of the following should be specified. Exec specifies the action to take.",
+          "$ref": "#/definitions/kruise.apps.v1alpha1.ExecAction"
+        },
+        "httpGet": {
+          "description": "HTTPGet specifies the http request to perform.",
+          "$ref": "#/definitions/io.k8s.api.core.v1.HTTPGetAction"
         }
       }
     },
@@ -470,6 +503,126 @@
             "type": "integer",
             "format": "int32"
           }
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.MarkProbe": {
+      "description": "MarkProbe describes a probe check to be performed against a pod to determine whether it is label",
+      "type": "object",
+      "properties": {
+        "exec": {
+          "description": "One and only one of the following should be specified. Exec specifies the action to take.",
+          "$ref": "#/definitions/kruise.apps.v1alpha1.ExecAction"
+        },
+        "httpGet": {
+          "description": "HTTPGet specifies the http request to perform.",
+          "$ref": "#/definitions/io.k8s.api.core.v1.HTTPGetAction"
+        },
+        "periodSeconds": {
+          "description": "How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "timeoutSeconds": {
+          "description": "Number of seconds after which the probe times out. Defaults to 1 second. Minimum value is 1. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle#container-probes",
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.PodProbeMarker": {
+      "description": "PodProbeMarker is the Schema for the podprobemarkers API",
+      "type": "object",
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ObjectMeta"
+        },
+        "spec": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.PodProbeMarkerSpec"
+        },
+        "status": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.PodProbeMarkerStatus"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.PodProbeMarkerList": {
+      "description": "PodProbeMarkerList contains a list of PodProbeMarker",
+      "type": "object",
+      "required": [
+        "items"
+      ],
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/kruise.apps.v1alpha1.PodProbeMarker"
+          }
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ListMeta"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.PodProbeMarkerSpec": {
+      "description": "PodProbeMarkerSpec defines the desired state of PodProbeMarker",
+      "type": "object",
+      "required": [
+        "selector",
+        "markProbe"
+      ],
+      "properties": {
+        "labels": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        },
+        "markProbe": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.MarkProbe"
+        },
+        "selector": {
+          "description": "INSERT ADDITIONAL SPEC FIELDS - desired state of cluster Important: Run \"make\" to regenerate code after modifying this file",
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.LabelSelector"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.PodProbeMarkerStatus": {
+      "description": "PodProbeMarkerStatus defines the observed state of PodProbeMarker",
+      "type": "object",
+      "required": [
+        "matched",
+        "succeeded",
+        "failed"
+      ],
+      "properties": {
+        "failed": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "matched": {
+          "description": "INSERT ADDITIONAL STATUS FIELD - define observed state of cluster Important: Run \"make\" to regenerate code after modifying this file",
+          "type": "integer",
+          "format": "int32"
+        },
+        "succeeded": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
